2006-01-02  Roger Leigh  <rleigh@debian.org>

	* Actually commit the new environment class.

2006-01-02  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.cc (Options): Rewrite the checks which
	decide which chroot configuration files should be read, depending
	upon the action specified.

	* schroot/schroot-options.h (all_used): new method to detect if
	any of the --all* options are in effect.

	* schroot/schroot.cc (main): If no chroots are available, warn
	rather than exiting with an error, since for several commands
	there may well not be any chroots defined.

	* schroot/sbuild-config.cc (validate_chroots): Correct inverse
	match which treated all correctly named chroots as being invalid.

2006-01-02  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-types.h: Remove env and env_list typedefs.

	* schroot/sbuild-session.cc: Remove env_list_to_strv helper,
	replaced by environment::get_strv().  Replace setup_env_var
	helper with environment add method.

	* schroot/sbuild-chroot.h: Chroot::setup_env() uses environment
	rather than env_list; derived classes also changed.  Removed
	setup_env_var helper.

	* schroot/sbuild-auth.h: Replace env_list with environment.
	Rename Auth::environment member to user_environment.

	* schroot/sbuild-auth.cc: Remove env_string helper.

	* schroot/sbuild-environment.(cc|h): New class sbuild::environment
	to replace sbuild::env_list and its associated helpers in a number
	of classes.  This is a collection of environment variables.

2006-01-01  Roger Leigh  <rleigh@debian.org>

	* Updated copyright notices to include 2006 changes.

	* schroot/Makefile.am: Generate a sbuild.gch precompiled header,
	and include sbuild.h in all sources which previously included an
	sbuild header.  This should improve compilation speed.

	* Rename schroot.h to sbuild.h, and include all sbuild-*.h
	headers.

	* schroot/sbuild-auth.cc (run): Fix casting to "const void **".

2005-12-31  Roger Leigh  <rleigh@debian.org>
